--- a/clgg.css
+++ b/clgg.css
@@ -18,10 +18,10 @@ hr{
 }
 body{
     padding:0px 10px;
-/*     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzH7bPeL_LVAl4U7z8Z-kaeYIRSiYg0nvoNQETe4CVYu8cZRjw-qEGkhiqz9LNY8NcbaY&usqp=CAU); */
-/*     background-repeat:no-repeat;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzH7bPeL_LVAl4U7z8Z-kaeYIRSiYg0nvoNQETe4CVYu8cZRjw-qEGkhiqz9LNY8NcbaY&usqp=CAU); */
+     background-repeat:no-repeat;
     background-position:center;
-    background-size: cover; */
+    background-size: cover; 
 }
 .btn{
     margin: auto;
@@ -83,7 +83,9 @@ span{
     img {
       display: block;
     }
-    
+    body#back{
+      background-image:none;
+      }
    
   
   }
