--- a/clgg.css
+++ b/clgg.css
@@ -73,7 +73,7 @@ span{
     color:rgba(0, 0, 0, 0.50);
     
 }
-@media only screen and (min-width: 480px) {
+@media (min-width: 320px) and (max-width: 480px) {
     img{
       display: none !important;
     }
