--- a/clgg.css
+++ b/clgg.css
@@ -73,7 +73,7 @@ span{
     color:rgba(0, 0, 0, 0.50);
     
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen  and (max-width: 790px){
     img{
       display: none !important;
     }
