--- a/clgg.css
+++ b/clgg.css
@@ -73,7 +73,7 @@ span{
     color:rgba(0, 0, 0, 0.50);
     
 }
-@media only screen  and (max-width: 790px){
+@media screen and (min-width: 500px) and (max-width: 790px) {
     img{
       display: none !important;
     }
@@ -82,7 +82,7 @@ span{
     }
   }
   
-  @media only screen and (min-width: 790px) and (max-width:1400px ) {
+  @media screen and (min-width: 790px) and (max-width:1400px ) {
     img {
       display: block;
     }
